@@ -6,8 +6,9 @@
     "domains": ["syllogistic"],
     "response_types": ["single-choice"],
     "models": [
-        "models/Baseline/Uniform-Model/uniform_model.py",
-        "models/Baseline/MFA-Model/mfa_model.py"
+        "models/2019-Brand/TransSet/transset.py",
+        "models/Baseline/MFA-Model",
+        "models/Baseline/Uniform-Model"
     ],
     "domain_encoders": {
         "syllogistic": "%ccobra%/syllogistic/encoder_syl.py"
