@@ -1,23 +1,0 @@
-{
-    "type": "adaption",
-    "data.train": "data/Ragni2016.csv",
-    "data.test": "data/Ragni2016.csv",
-    "corresponding_data": true,
-    "domains": ["syllogistic"],
-    "response_types": ["single-choice"],
-    "models": [
-        "models/2012-Khemlani/Atmosphere/atmosphere.py",
-        "models/2012-Khemlani/Conversion/conversion.py",
-        "models/2012-Khemlani/Matching/matching.py",
-        "models/2012-Khemlani/MentalModels/mmt.py",
-        "models/2012-Khemlani/PHM/phm.py",
-        "models/2012-Khemlani/PSYCOP/psycop.py",
-        "models/2012-Khemlani/VerbalModels/verbalmodels.py",
-        "models/Baseline/NVC-Model/nvc_model.py",
-        "models/Baseline/Uniform-Model/uniform_model.py",
-        "models/Baseline/MFA-Model/mfa_model.py"
-    ],
-    "domain_encoders": {
-        "syllogistic": "%ccobra%/syllogistic/encoder_syl.py"
-    }
-}
